--- a/css.css
+++ b/css.css
@@ -9,6 +9,7 @@ ul:after{
 }
 ul{
     margin: 0 auto;
+    width: 50%;
 }
 li:before{
     content: "";padding-top: 100%;display: block;
@@ -22,4 +23,7 @@ li.list{
     margin-left: 10px;
     margin-top: 10px;
     border-radius: 10px;
+}
+@media screen and (max-width:750px) {
+    ul{width: 100%}
 }
