--- a/css.css
+++ b/css.css
@@ -24,6 +24,8 @@ li.list{
     margin-top: 10px;
     border-radius: 10px;
 }
+/*asdjf*/
 @media screen and (max-width:750px) {
     ul{width: 100%}
+
 }
